--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body >
-    <h1 style="color:yellow" class="text-uppercase">uppercase text test</h1>
+    <h1 style="color:yellow" class="text-uppercase">Uppercase text test</h1>
     <h1 class="text-lowercase" id="text">lowercase text test</h1>
   </body>
 </html>
